Fix blank gap in mobile devices

--- a/public/styles/site/home.less
+++ b/public/styles/site/home.less
@@ -90,8 +90,12 @@
   }
 }
 .intro-about-mobile {
-  margin: 15px 0;
+  margin: 0;
+  margin-bottom: 15px;
   width: 100%;
+  img {
+    margin-top: 15px;
+  }
   .about-description-mobile {
     border-top: 5px solid #171614;
     border-bottom: 5px solid #171614;
