--- a/public/styles/site/layout.less
+++ b/public/styles/site/layout.less
@@ -176,6 +176,7 @@ nav.nav-desktop {
   border: none;
   border-radius: 0;
   font-family: 'Karla', sans-serif;
+  margin-bottom: 0;
   .navbar-header {
     button.navbar-toggle {
       border-color: transparent;
@@ -246,6 +247,8 @@ nav.nav-desktop {
   padding-bottom: @footer-height;
   position: absolute;
   overflow: hidden;
+  top: 0;
+  left: 0;
   width: 0%;
   transition: all 0.35s linear;
   transition-delay: 0.2s;
@@ -262,6 +265,7 @@ nav.nav-desktop {
       top: 20px;
       right: 10%;
       font-size: 30px;
+      z-index: 5;
       &:hover,
       &:focus,
       &:active {
